rules/dangling-gateway-backend/test/failed_wrong_namespace/input/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ns-route
  namespace: default
spec:
  rules:
  - backendRefs:
    - name: web-service
      port: 8080
