rules/dangling-gateway-backend/test/failed_wrong_namespace/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: other
spec:
  ports:
  - port: 8080
